--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/mayalogo.png" />
+    <meta name="description" content="The number on site for your best, latest and most popular movies" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vader Movies</title>
   </head>
